syntax = "proto3";

option go_package = "pkg/api/account_service";

package api;



service Account_Service {

  rpc Ping(PingRequest) returns (PingResponse);

  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);

  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);

  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);

  rpc CreateBuisness(CreateBuisnessRequest) returns (CreateBuisnessResponse);
  
  rpc GetBuisness(GetBuisnessRequest) returns (GetBuisnessResponse);
  
}
message PingRequest {}

message PingResponse {
  optional string company_id = 1;
  string pingMessage = 2;
}

message CreateBuisnessRequest{
  string id = 1;
  string name = 2;
}

message CreateBuisnessResponse{}

message GetBuisnessRequest{
  string id = 1;

}

message GetBuisnessResponse{
  string name = 1;
}


message CreateUserRequest{

  string id = 1;

  string name = 2;

  string surname = 3;

  string avatar_url = 4;

  int32 age = 5;

  string country = 6;
}

message CreateUserResponse{}

message UpdateUserRequest{

  string id = 1;

  string name = 2;

  string surname = 3;

  string avatar_url = 4;

  int32 age = 5;

  string country = 6;
}

message UpdateUserResponse{}


message DeleteUserRequest{
  string id = 1;
}

message DeleteUserResponse{}



